[package]
name = "import-modules"
version = "0.1.0"
edition = "2021"
license-url = "https://github.com/FlamesX-128/import-modules/blob/main/LICENSE"
license = "MIT"

authors = ["FlamesX-128 <glowingorangeflames@gmail.com>"]
exclude = ["tarjet", "tests"]

description = "import-all is a crate that enhances the ease of importing modules using regex patterns. It is based on the npm package require-all."

readme = "README.md"
homepage = "https://github.com/FlamesX-128/import-modules#import-modules"
repository = "https://github.com/FlamesX-128/import-modules"

keywords = [
    "import",
    "modules",
    "module",
    "require",
    "all"
]

[lib]
proc_macro = true

[dependencies]
regex = "1.8"
fancy-regex = "0.11"
