[package]
name = "import-modules"
version = "0.1.1"
edition = "2021"

license-url = "https://github.com/FlamesX-128/import-modules/blob/main/LICENSE"
repository = "https://github.com/FlamesX-128/import-modules"

license = "MIT"

authors = ["FlamesX-128 <glowingorangeflames@gmail.com>"]
exclude = ["tarjet", "tests"]

description = "import-all is a crate that enhances the ease of importing modules using regex patterns. It is based on the npm package require-all."

readme = "https://github.com/FlamesX-128/import-modules/blob/main/README.md"
homepage = "https://github.com/FlamesX-128/import-modules#import-modules"

keywords = [
    "import",
    "modules",
    "module",
    "require",
    "all"
]

[lib]
proc_macro = true

[dependencies]
fancy-regex = "0.11"
