[package]
name = "import-modules"
version = "1.0.0"
edition = "2021"

license-url = "https://github.com/FlamesX-128/import-modules/blob/main/LICENSE"
repository = "https://github.com/FlamesX-128/import-modules"

license = "MIT"

authors = ["FlamesX-128 <glowingorangeflames@gmail.com>"]
exclude = ["target", "tests"]

description = "import-modules is a library based on require-all"

readme = "README.md"
homepage = "https://github.com/FlamesX-128/import-modules#import-modules"

keywords = [
  "import-modules",
  "import-all",
  "import",
  "module",
  "all"
]

[lib]
proc_macro = true

[dependencies]
fancy-regex = "0.11"
quote = "1.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

